Missing updated files in www folder.

--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
 	<!-- your app's js -->
 	<script src="js/app.js"></script>
 </head>
-<body class="home">
+<body class="home platform-android platform-cordova platform-webview">
 	<div id="frame">
 		<header>
 			<p class="header-text">Home</p>
@@ -42,7 +42,11 @@
 				<img src="dist/images/banner_home.png" alt="Avatar">
 				<p>Hi! I am your guide!<br>Select an activity to begin.</p>
 			</div>
-			<img src="src/images/Matific.png" alt="" id="app1">
+			<!--This is using native JavaScript Interface to luanch app -->
+			<button id="metific" onclick="window.JSInterface.openApp('com.slatescience.Matific')"></button>
+			
+			<!--This is using launcher plugin to load the app -->
+			<button id="metific" onclick="launchApp('com.slatescience.Matific')"></button>
 		</div>
 
 		<ul id="footer">
