--- a/www/index.html
+++ b/www/index.html
@@ -25,14 +25,14 @@
 	<!-- your app's js -->
 	<script src="js/app.js"></script>
 </head>
-<body class="home platform-android platform-cordova platform-webview">
+<body class="home platform-android platform-cordova platform-webview" onload="initApp()">
 	<div id="frame">
 		<header>
-			<p data-i18n="Home" class="header-text  i18n"></p>
+			<p data-i18n="Home" class="header-text i18n">Home</p>
 			<div id="profile-button">
 				<a href="my_profile.html">
 					<img src="dist/images/my_profile_icon.png" alt="My Profile">
-					<p>My Profile</p>
+					<p data-i18n="MyProfile" class="i18n">My Profile</p>
 				</a>
 			</div>
 		</header>
@@ -40,7 +40,7 @@
 		<div id="viewer">
 			<div id="banner">
 				<img src="dist/images/banner_home.png" alt="Avatar">
-				<p>Hi! I am your guide!<br>Select an activity to begin.</p>
+				<p data-i18n="Welcome" class="i18n">Hi! I am your guide!<br>Select an activity to begin.</p>
 			</div>
 			<!--This is using launcher plugin to load the app -->
 			<div class="appIconRow">
@@ -72,9 +72,9 @@
 		</div>
 
 		<ul id="footer">
-			<li id="home_link" class="active"><a href="index.html">Home</a>
-			</li><li id="learning_link"><a href="learning.html">Learning</a>
-			</li><li id="community_link"><a href="community.html">Community</a>
+			<li id="home_link" class="active"><a data-i18n="Home" href="index.html" class="i18n">Home</a>
+			</li><li id="learning_link"><a data-i18n="Learning" href="learning.html" class="i18n">Learning</a>
+			</li><li id="community_link"><a data-i18n="Community" class="i18n" href="community.html">Community</a>
 		</li></ul>
 	</div>
 </body>
