Translation added in learning home page.

--- a/platforms/android/assets/www/learning.html
+++ b/platforms/android/assets/www/learning.html
@@ -6,16 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dev4X</title>
   <meta name="description" content="">
+  <script src="cordova.js"></script>
+
+  <!-- App Laucnher (https://github.com/nchutchind/App-Launcher-Cordova-Plugin) -->
+  <script src="js/Launcher.js"></script>
+  <script src="js/app.js"></script>
   <link rel="stylesheet" href="dist/styles/screen.css">
+  <link href="css/style.css" rel="stylesheet">
 </head>
-<body class="learning">
+<body class="learning" onload="initApp()">
 	<div id="frame">
 		<header>
-			<p class="header-text">Learning</p>
+			<p data-i18n="Learning" class="header-text i18n">Learning</p>
 			<div id="profile-button">
 				<a href="my_profile.html">
 					<img src="dist/images/my_profile_icon.png" alt="My Profile">
-					<p>My Profile</p>
+                    <p data-i18n="MyProfile" class="i18n">My Profile</p>
 				</a>
 			</div>
 		</header>
@@ -23,20 +29,45 @@
 		<div id="viewer">
 			<div id="banner">
 				<img src="dist/images/banner_learning.png" alt="Learning">
-				<p>Learn at your own pace<br>using different resources.</p>
+				<p data-i18n="AutoLearn" class="i18n">Learn at your own pace<br>using different resources.</p>
 			</div>
 			<ul id="sub-nav">
-				<li class="active"><a href="learning.html">In progress</a>
-				<li><a href="learning_skills.html">Skills</a>
-				<li><a href="learning_resources.html">Resources</a>
+				<li class="active"><a href="learning.html" data-i18n="InProgress" class="i18n">In progress</a>
+				<li><a href="learning_skills.html" data-i18n="Skills" class="i18n">Skills</a>
+				<li><a href="learning_resources.html" data-i18n="Resources" class="i18n">Resources</a>
 			</ul>
-			<img src="dist/images/learning_icon_list.png" alt="">
+            <div class="appIconRow">
+                <button id="abcphonics" class="appIcon" onclick="launchApp('kr.co.smartstudy.phonicsiap_android_googlemarket')"></button>
+                <button id="swalihiphonics" class="appIcon" onclick="launchApp('com.einbrain.swahili01')"></button>
+            </div>
+
+            <div class="appIconRow">
+                <button id="endlessalphabet" class="appIcon" onclick="launchApp('com.originatorkids.EndlessAlphabet')"></button>
+                <button id="kakachui" class="appIcon" onclick="launchApp('com.game254studios.kakanchui')"></button>
+                <button id="metific" class="appIcon" onclick="launchApp('com.slatescience.Matific')"></button>
+                <button id="montessori" class="appIcon" onclick="launchApp('air.mobi.kidsacademy.gp.abc.hd')"></button>
+            </div>
+
+            <div class="appIconRow">
+                <button id="onebillion3-5" class="appIcon" onclick="launchApp('uk.org.onebillion.maths.practice_1')"></button>
+                <button id="onebillion4-6" class="appIcon" onclick="launchApp('com.eurotalk.maths_2')"></button>
+                <button id="graphogame" class="appIcon" onclick="launchApp('com.graphogame.GGUSEnglishDemo')"></button>
+                <button id="smartyants" class="appIcon" onclick="launchApp('com.smartyants.app1')"></button>
+            </div>
+            <div class="appIconRow">
+                <button id="pixelparker" class="appIcon" onclick="launchApp('air.com.spinlight.pixelandparker')"></button>
+                <button id="eggyalphabet" class="appIcon" onclick="launchApp('air.com.blake.eggyalphabet')"></button>
+                <button id="eggy100" class="appIcon" onclick="launchApp('air.com.thirdsense.eggy100')"></button>
+                <button id="eggyjump" class="appIcon" onclick="launchApp('com.slingshotgames.eggyjump')"></button>
+                <button id="electriccompany" class="appIcon" onclick="launchApp('org.pbskids.pranksterplanet')"></button>
+                <button id="coloringblock" class="appIcon" onclick="launchApp('pl.ayground.coloringbook')"></button>
+            </div>
 		</div>
 
 		<ul id="footer">
-			<li id="home_link"><a href="index.html">Home</a>
-			<li id="learning_link" class="active"><a href="learning.html">Learning</a>
-			<li id="community_link"><a href="community.html">Community</a>
+            <li id="home_link" class="active"><a data-i18n="Home" class="i18n" href="index.html">Home</a>
+            </li><li id="learning_link"><a data-i18n="Learning" href="learning.html" class="i18n">Learning</a>
+            </li><li id="community_link"><a data-i18n="Community" class="i18n" href="community.html">Community</a>
 		</ul>
 	</div>
 </body>
