--- a/www/learning.html
+++ b/www/learning.html
@@ -34,7 +34,7 @@
 			<ul id="sub-nav">
 				<li class="active"><a href="learning.html" data-i18n="InProgress" class="i18n">In progress</a>
 				<li><a href="learning_skills.html" data-i18n="Skills" class="i18n">Skills</a>
-				<li><a href="learning_resources.html" data-i18n="Resources" class="i18n">Resources</a>
+				<li><a href="learning_resources.html" data-i18n="Resources" class="i18n">Resources</a></li>
 			</ul>
             <div class="appIconRow">
                 <button id="abcphonics" class="appIcon" onclick="launchApp('kr.co.smartstudy.phonicsiap_android_googlemarket')"></button>
@@ -65,9 +65,9 @@
 		</div>
 
 		<ul id="footer">
-            <li id="home_link" class="active"><a data-i18n="Home" class="i18n" href="index.html">Home</a>
-            </li><li id="learning_link"><a data-i18n="Learning" href="learning.html" class="i18n">Learning</a>
-            </li><li id="community_link"><a data-i18n="Community" class="i18n" href="community.html">Community</a>
+            <li id="home_link"><a data-i18n="Home" class="i18n" href="index.html">Home</a>
+            </li><li id="learning_link" class="active"><a data-i18n="Learning" href="learning.html" class="i18n">Learning</a>
+            </li><li id="community_link"><a data-i18n="Community" class="i18n" href="community.html">Community</a></li>
 		</ul>
 	</div>
 </body>
