--- a/www/learning_skills.html
+++ b/www/learning_skills.html
@@ -40,7 +40,7 @@
 		</div>
 
 		<ul id="footer">
-            <li id="home_link" class="active"><a data-i18n="Home" class="i18n" href="index.html">Home</a>
+            <li id="home_link"><a data-i18n="Home" class="i18n" href="index.html">Home</a>
             </li><li id="learning_link" class="active"><a data-i18n="Learning" href="learning.html" class="i18n">Learning</a>
         </li><li id="community_link"><a data-i18n="Community" class="i18n" href="community.html">Community</a></li>
 		</ul>
